--- a/src/components/movies/movieDetailPage/movieDetailInfo/movieDetailInfoLeft/movieRecommend/MovieRecomment.style.scss
+++ b/src/components/movies/movieDetailPage/movieDetailInfo/movieDetailInfoLeft/movieRecommend/MovieRecomment.style.scss
@@ -1,6 +1,6 @@
 .Movie-recommend {
   background-color: #d6f8df;
-
+  padding: 0 2rem;
   .Movie-recommend-title {
     font-weight: bold;
     font-size: 2rem;
