Add more stying and readmore function for long description

--- a/src/components/commonComponent/actorCard/ActorCard.styles.scss
+++ b/src/components/commonComponent/actorCard/ActorCard.styles.scss
@@ -13,6 +13,7 @@
   }
 
   img {
+    width: 100%;
   }
 
   .no-image-person {
@@ -21,6 +22,7 @@
     text-align: center;
     line-height: 12rem;
     color: #b5b5b5;
+    width: 100%;
   }
 
   .no-image-person::before {
