--- a/src/components/movies/movieNavBar/MovieNavigationBar.style.scss
+++ b/src/components/movies/movieNavBar/MovieNavigationBar.style.scss
@@ -1,5 +1,5 @@
 .Movie-navigation {
-  background-color: rgb(10, 92, 60);
+  background-color: rgb(47, 163, 119);
   color: white;
   height: 5rem;
   display: flex;
@@ -35,7 +35,7 @@
 }
 
 .dropdown-container:hover {
-  color: #d6cbf4;
+  color: #d1d1d1;
 }
 
 .dropdown-container:hover .dropdown-hidden-container {
@@ -53,9 +53,9 @@
 }
 
 .nav-button {
-  color: rgb(245, 255, 245);
+  color: rgb(255, 255, 255);
 }
 
 .nav-button:hover {
-  color: #b3e7cd;
+  color: #d3cece;
 }
