--- a/src/components/layouts/header/Header.styles.scss
+++ b/src/components/layouts/header/Header.styles.scss
@@ -1,78 +1,73 @@
 .Header {
-    background-color: white;
-    font-family: 'Work Sans', sans-serif;    
-    font-weight: bold;
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid #26B9A7;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    width: 100vw;
-    z-index: 9999;    
+  background-color: white;
+  font-family: "Work Sans", sans-serif;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #26b9a7;
+  align-items: center;
+  position: fixed;
+  top: 0;
+
+  z-index: 9999;
 }
 
-.logo-and-text  {
-    display: flex;
-    padding: 1rem 0;
+.logo-and-text {
+  display: flex;
+  padding: 1rem 0;
 }
 
 .logo {
-    background: transparent;
-    width: 28px;    
-    height: 19px;
-    display: block;
-    margin-left: 3rem;
-   
+  background: transparent;
+  width: 28px;
+  height: 19px;
+  display: block;
+  margin-left: 3rem;
 }
 
 .logo-name {
-    color: #26B9A7;
-    font-size: 1rem;
-    margin-left: 0.5rem;
-    
+  color: #26b9a7;
+  font-size: 1rem;
+  margin-left: 0.5rem;
 }
 
 .header-search {
-    width: 45vw;
-    
+  width: 45vw;
 }
 
-.user-authenticate{
-    display: flex;
-    align-items: center;
-    margin-right: 3rem;
+.user-authenticate {
+  display: flex;
+  align-items: center;
+  margin-right: 3rem;
 }
 
 .user-button {
-    margin-left: 1rem;
-    border: none;
-    color: white;
+  margin-left: 1rem;
+  border: none;
+  color: white;
 }
 
 @media (max-width: 700px) {
-    .logo-name {
-        display: none;
-    }
+  .logo-name {
+    display: none;
+  }
 
-    .header-search {
-        display: none;
-    }
+  .header-search {
+    display: none;
+  }
 }
 
-
-
-// custom bootstrap button 
+// custom bootstrap button
 
 .btn-outline-primary {
-    color: #26B9A7;
+  color: #26b9a7;
 }
 
 .btn-outline-primary:hover {
-    background-color: #26B9A7 !important;
-    border: 1px solid #26B9A7 !important;
+  background-color: #26b9a7 !important;
+  border: 1px solid #26b9a7 !important;
 }
 
 .logo-and-text:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
