Refactored debugging code

--- a/src/components/people/popularPeople/PopularPeople.style.scss
+++ b/src/components/people/popularPeople/PopularPeople.style.scss
@@ -1,5 +1,5 @@
 .Popular-people {
-  margin: 0 auto;
+  margin: 4.5rem auto;
   padding: 0 2rem;
 
   .popular-people-title {
@@ -8,6 +8,7 @@
     font-weight: 600;
     font-family: Arial;
     padding-left: 1rem;
+    color: green;
   }
 
   .popular-people-paginate-container {
