--- a/src/components/commonComponent/VideoDetailHeader/VideoDetailHeader.styles.scss
+++ b/src/components/commonComponent/VideoDetailHeader/VideoDetailHeader.styles.scss
@@ -28,6 +28,7 @@
   justify-content: center;
   color: white;
   padding: 40px;
+  margin: 1.5rem;
 
   .movie-detail-header-movie-poster {
     .no-image {
