--- a/src/components/people/PeopleDetailPage/peopleDetailPageLeft/peopleDetailPageLeft.style.scss
+++ b/src/components/people/PeopleDetailPage/peopleDetailPageLeft/peopleDetailPageLeft.style.scss
@@ -11,6 +11,20 @@
       -moz-box-shadow: 10px 10px 5px -6px rgba(170, 227, 177, 1);
       box-shadow: 10px 10px 5px -6px rgba(170, 227, 177, 1);
     }
+
+    .people-detail-left-no-image {
+      background-color: rgb(194, 194, 194);
+      margin: 0 auto;
+      width: 300px;
+      height: 450px;
+      font-size: 15rem;
+      color: rgb(136, 135, 136);
+
+      .people-detail-left-no-image-text {
+        font-size: 1rem;
+        color: rgb(104, 104, 104);
+      }
+    }
   }
 
   .people-detail-left-info {
