--- a/src/components/movies/movieSearchBar/MovieSearchBar.style.scss
+++ b/src/components/movies/movieSearchBar/MovieSearchBar.style.scss
@@ -15,7 +15,7 @@
       }
       .react-autosuggest__input {
         background-color: white;
-        margin: 1rem 0;
+        margin: 1rem 0 0 0;
       }
 
       //accordian
