--- a/src/components/commonComponent/VideoDetailHeader/VideoDetailHeader.styles.scss
+++ b/src/components/commonComponent/VideoDetailHeader/VideoDetailHeader.styles.scss
@@ -38,6 +38,10 @@
       font-size: 12rem;
       text-align: center;
       padding-top: 80px;
+
+      .no-image-text {
+        font-size: 1rem;
+      }
     }
   }
 
