--- a/src/components/movies/movieSearchBar/MovieSearchBar.style.scss
+++ b/src/components/movies/movieSearchBar/MovieSearchBar.style.scss
@@ -1,85 +1,92 @@
 .search-form-container {
-  position: relative;
-  // form
-  .search-form {
-    position: absolute;
-    width: 100%;
-    z-index: 99999;
-    //whole container for suggestions
-    .react-autosuggest__container {
-      //input
+	position: relative;
+	// form
+	.search-form {
+		position: fixed;
+		width: 100%;
+		z-index: 99999;
 
-      #search {
-        padding-left: 2.3rem;
-        font-size: 1.2rem;
-      }
-      .react-autosuggest__input {
-        background-color: white;
-        margin: 1rem 0 0 0;
-      }
+		appearance: none;
+		//whole container for suggestions
+		.react-autosuggest__container {
+			//input
 
-      //accordian
-      .react-autosuggest__suggestions-container {
-        //ul
-        .react-autosuggest__suggestions-list {
-          //li
-          padding-left: 0 !important;
+			#search {
+				padding-left: 2.3rem;
+				font-size: 1.2rem;
+			}
+			.react-autosuggest__input {
+				background-color: white;
+				margin: 1rem 0 0 0;
+				border-radius: 5px;
 
-          .react-autosuggest__suggestion {
-            .suggestion-row {
-              font-size: 1.1rem;
-              padding-left: 1.5rem;
+				border-color: rgb(199, 199, 199);
+				border-style: solid;
+				outline: none;
+			}
 
-              .suggestion-title-text {
-                padding-left: 1rem;
-              }
-              .suggestion-title-year-or-department {
-                padding-left: 0.5rem;
-                color: gray;
-              }
-            }
-          }
-        }
-      }
+			//accordian
+			.react-autosuggest__suggestions-container {
+				//ul
+				.react-autosuggest__suggestions-list {
+					//li
+					padding-left: 0 !important;
 
-      .react-autosuggest__suggestion:nth-child(odd) {
-        background-color: rgb(255, 251, 251);
-      }
+					.react-autosuggest__suggestion {
+						.suggestion-row {
+							font-size: 1.1rem;
+							padding-left: 1.5rem;
 
-      .react-autosuggest__suggestion:nth-child(even) {
-        background-color: rgb(255, 255, 255);
-      }
-    }
-  }
+							.suggestion-title-text {
+								padding-left: 1rem;
+							}
+							.suggestion-title-year-or-department {
+								padding-left: 0.5rem;
+								color: gray;
+							}
+						}
+					}
+				}
+			}
+
+			.react-autosuggest__suggestion:nth-child(odd) {
+				background-color: rgb(255, 251, 251);
+			}
+
+			.react-autosuggest__suggestion:nth-child(even) {
+				background-color: rgb(255, 255, 255);
+			}
+		}
+	}
 }
 
 #search {
-  width: 100%;
-  height: 50px;
-  box-shadow: none;
-  font-size: 16px;
-  padding-left: 0.3rem;
-  outline: none;
+	width: 100%;
+	height: 50px;
+	box-shadow: none;
+	font-size: 16px;
+	padding-left: 0.3rem;
+	outline: none;
 }
 
 #search-icon {
-  width: 65px;
-  border: 1px solid #d3d3d3;
-  background-color: #f8f8f8;
-  margin: 0;
-  border-left: none;
+	width: 65px;
+	border: 1px solid #d3d3d3;
+	background-color: #f8f8f8;
+	margin: 0;
+	border-left: none;
 }
 
 .react-autosuggest__suggestion {
-  cursor: pointer;
+	cursor: pointer;
 
-  .react-autosuggest__suggestions-list {
-    padding: 0;
-  }
-  .suggestion-row {
-    border-bottom: 1px solid rgb(216, 214, 214);
-  }
+	.react-autosuggest__suggestions-list {
+		padding: 0;
+	}
+	.suggestion-row {
+		border-bottom: 1px solid rgb(216, 214, 214);
+	}
 }
 .react-autosuggest__suggestion--highlighted {
-  background-color: rgb(124, 192, 124) !important;
+	background-color: rgb(124, 192, 124) !important;
 }
