Change styles after changing header

--- a/src/components/movies/movieMainPage/MovieMainPage.styles.scss
+++ b/src/components/movies/movieMainPage/MovieMainPage.styles.scss
@@ -1,4 +1,4 @@
 .Movie-main-page {
-  background-color: rgb(247, 255, 249);
-  margin: 3rem;
+	background-color: rgb(247, 255, 249);
+	padding-top: 7rem;
 }
