--- a/src/components/layouts/header/Header.styles.scss
+++ b/src/components/layouts/header/Header.styles.scss
@@ -3,10 +3,13 @@
 	top: 0;
 	width: 100%;
 	transition: top 0.6s;
+	display: flex;
+	// justify-content: center;
+	z-index: 9999;
 }
 
-.visible .hidden {
-	top: -63px;
+.visible.hidden {
+	top: -100px;
 	position: fixed;
 	width: 100%;
 	transition: top 0.6s;
@@ -17,14 +20,16 @@
 	font-family: "Work Sans", sans-serif;
 	font-weight: bold;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
-	border-bottom: 1px solid #26b9a7;
+
 	align-items: center;
 	top: 0;
-	z-index: 9999;
+	width: 100%;
 }
 
+.header-left {
+}
 .logo-and-text {
 	display: flex;
 	padding: 1rem 0;
