--- a/src/components/layouts/floatingButton/FooatingBtn.style.scss
+++ b/src/components/layouts/floatingButton/FooatingBtn.style.scss
@@ -1,39 +1,39 @@
 .Floating {
-  position: fixed;
-  top: 5.4vh;
-  right: 5vw;
-  z-index: 9999;
+	position: fixed;
+	bottom: 5.4vh;
+	right: 5vw;
+	z-index: 9999;
 }
 
 .Floating li,
 .Floating a {
-  background: linear-gradient(
-    45deg,
-    rgb(219, 55, 55) 40%,
-    rgb(231, 117, 117) 90%
-  );
-  z-index: 1;
-  position: relative;
+	background: linear-gradient(
+		45deg,
+		rgb(219, 55, 55) 40%,
+		rgb(231, 117, 117) 90%
+	);
+	z-index: 1;
+	position: relative;
 }
 
 .Floating a::before {
-  position: absolute;
-  content: "";
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  border-radius: 28px;
-  background: linear-gradient(
-    45deg,
-    rgb(231, 117, 117) 40%,
-    rgb(107, 254, 127) 90%
-  );
-  z-index: -1;
-  transition: opacity 0.5s linear;
-  opacity: 0;
+	position: absolute;
+	content: "";
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	border-radius: 28px;
+	background: linear-gradient(
+		45deg,
+		rgb(231, 117, 117) 40%,
+		rgb(107, 254, 127) 90%
+	);
+	z-index: -1;
+	transition: opacity 0.5s linear;
+	opacity: 0;
 }
 
 .Floating a:hover::before {
-  opacity: 1;
+	opacity: 1;
 }
