Finalizing width and margins for better UX

--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,25 @@
 .App {
-  font-family: "Source Sans Pro", sans-serif;
-  box-sizing: border-box;
-  background-color: rgb(247, 255, 249);
+	font-family: "Source Sans Pro", sans-serif;
+	box-sizing: border-box;
+	background-color: rgb(247, 255, 249);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 li {
-  list-style: none;
+	list-style: none;
 }
 
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 a:hover {
-  text-decoration: none !important;
+	text-decoration: none !important;
 }
 
 a:focus {
-  outline: none;
+	outline: none;
 }
