--- a/src/components/movies/movieCategoryDetail/MovieCategoryDetailPage.style.scss
+++ b/src/components/movies/movieCategoryDetail/MovieCategoryDetailPage.style.scss
@@ -1,51 +1,52 @@
 .Movie-category-detail-page {
-  padding-bottom: 5rem;
-  background-color: rgb(247, 255, 249);
+	padding-bottom: 5rem;
+	background-color: rgb(247, 255, 249);
 
-  .category-detail-paginate-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+	.category-detail-paginate-container {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
 }
 
 .movie-category-detail-title {
-  margin-top: 5rem;
-  font-size: 1.5rem;
-  font-weight: bold;
-  padding-left: 3rem;
-  color: rgb(9, 116, 9);
+	margin-top: 5rem;
+	font-size: 1.5rem;
+	font-weight: bold;
+	padding-left: 3rem;
+	color: rgb(9, 116, 9);
 }
 
 .Movie-category-detail-page-content {
-  margin-top: 1rem;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  justify-items: center;
-  padding: 0.5rem;
+	width: 82vw;
+	margin-top: 1rem;
+	margin: 0 auto;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+	justify-items: center;
+	padding: 0.5rem;
 }
 
 @media (max-width: 1200px) {
-  .movie-category-detail-title {
-    text-align: center;
-  }
+	.movie-category-detail-title {
+		text-align: center;
+	}
 }
 
 @media (max-width: 826px) {
-  .movie-category-detail-title {
-    margin-top: 7rem;
-  }
+	.movie-category-detail-title {
+		margin-top: 7rem;
+	}
 }
 
 @media (max-width: 1079px) {
-  .Movie-category-detail-page-content {
-    grid-template-columns: 1fr 1fr;
-  }
+	.Movie-category-detail-page-content {
+		grid-template-columns: 1fr 1fr;
+	}
 }
 
 @media (max-width: 1036px) {
-  .Movie-category-detail-page-content {
-    grid-template-columns: 1fr;
-  }
+	.Movie-category-detail-page-content {
+		grid-template-columns: 1fr;
+	}
 }
