--- a/src/components/layouts/footer/Footer.styles.scss
+++ b/src/components/layouts/footer/Footer.styles.scss
@@ -1,85 +1,85 @@
 .Footer {
-  background-image: linear-gradient(#85eea1, #072025);
-  color: white;
-  width: 100%;
-  padding: 5rem 1rem;
+	background-color: rgb(3, 31, 55);
+	color: white;
+	width: 100%;
+	padding: 5rem 1rem;
 }
 
 .footerTitle {
-  font-size: 1.8rem;
-  color: beige;
-  padding-bottom: 1rem;
+	font-size: 1.8rem;
+	color: beige;
+	padding-bottom: 1rem;
 }
 
 .cards {
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  grid-gap: 10px;
+	margin: 0 auto;
+	display: grid;
+	grid-template-columns: 1fr 2fr 1fr;
+	grid-gap: 10px;
 }
 
 .card {
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: white;
-  padding-bottom: 2rem;
+	padding: 2rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: white;
+	padding-bottom: 2rem;
 
-  border-radius: 5px;
+	border-radius: 5px;
 }
 .cardTitle {
-  font-size: 1.4rem;
-  font-weight: bold;
-  margin: 1rem 0;
-  color: rgb(94, 93, 93);
-  border-bottom: 1px solid gray;
+	font-size: 1.4rem;
+	font-weight: bold;
+	margin: 1rem 0;
+	color: rgb(94, 93, 93);
+	border-bottom: 1px solid gray;
 }
 
 .cardChips {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
 }
 
 .cardBody {
-  color: darkgray;
-  padding-top: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+	color: darkgray;
+	padding-top: 10vh;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
 }
 
 .skills {
-  display: flex;
+	display: flex;
 }
 
 .copyright {
-  margin-top: 3rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  letter-spacing: 3px;
-  font-size: 0.8rem;
+	margin-top: 3rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	letter-spacing: 3px;
+	font-size: 0.8rem;
 }
 
 .link {
-  cursor: pointer;
-  height: 1.2rem;
-  width: 100%;
-  margin: 0.5rem;
-  transition: all 0.5s ease;
-  color: green;
+	cursor: pointer;
+	height: 1.2rem;
+	width: 100%;
+	margin: 0.5rem;
+	transition: all 0.5s ease;
+	color: green;
 }
 
 .link:hover {
-  color: rgb(5, 43, 24);
-  font-size: 1.1rem;
+	color: rgb(5, 43, 24);
+	font-size: 1.1rem;
 }
 
 @media (max-width: 800px) {
-  .cards {
-    grid-template-columns: 1fr;
-  }
+	.cards {
+		grid-template-columns: 1fr;
+	}
 }
