Add margin to the title(search bar overwrap header)

--- a/src/components/movies/movieCategoryDetail/MovieCategoryDetailPage.style.scss
+++ b/src/components/movies/movieCategoryDetail/MovieCategoryDetailPage.style.scss
@@ -1,7 +1,7 @@
 .Movie-category-detail-page {
 	padding-bottom: 5rem;
 	background-color: rgb(247, 255, 249);
-
+	margin-top: 3.5rem;
 	.category-detail-paginate-container {
 		display: flex;
 		justify-content: center;
