--- a/src/components/movies/movieCategory/MovieCategory.styles.scss
+++ b/src/components/movies/movieCategory/MovieCategory.styles.scss
@@ -4,7 +4,7 @@
 	font-size: 1.5rem;
 	margin: 2rem 0 3rem 0;
 	background-color: rgb(3, 37, 65);
-	width: fit-content;
+	width: 300px;
 	padding: 5px 20px;
 	border-radius: 20px;
 
