--- a/src/components/people/popularPeople/PopularPeople.style.scss
+++ b/src/components/people/popularPeople/PopularPeople.style.scss
@@ -9,7 +9,8 @@
 		font-weight: 600;
 		font-family: Arial;
 		padding-left: 1rem;
-		color: green;
+		color: rgb(3, 37, 65);
+		margin-top: 4rem;
 	}
 
 	.popular-people-paginate-container {
