Implement responsive webpage

--- a/src/components/commonComponent/VideoDetailHeader/VideoDetailHeader.styles.scss
+++ b/src/components/commonComponent/VideoDetailHeader/VideoDetailHeader.styles.scss
@@ -28,7 +28,7 @@
 	justify-content: center;
 	color: white;
 	padding: 40px;
-	margin: 5rem;
+	margin: 5rem 5rem 0 5rem;
 
 	.movie-detail-header-movie-poster {
 		margin-top: 2rem;
