Full face change for landing page

--- a/src/components/movies/movieCategory/MovieCategory.styles.scss
+++ b/src/components/movies/movieCategory/MovieCategory.styles.scss
@@ -1,5 +1,5 @@
 .category-title {
-	font-family: "Source Sans Pro", sans-serif;
+	font-family: "Nunito", sans-serif;
 	font-weight: 600;
 	font-size: 1.5rem;
 	margin: 2rem 0 3rem 0;
