--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 .App {
-	font-family: "Source Sans Pro", sans-serif;
+	font-family: "Nunito", sans-serif;
 	box-sizing: border-box;
 	background-color: rgb(247, 255, 249);
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	width: 100vw;
 }
 
 li {
