--- a/src/components/layouts/header/Header.styles.scss
+++ b/src/components/layouts/header/Header.styles.scss
@@ -1,6 +1,7 @@
 .visible {
 	position: fixed;
 	top: 0;
+	left: 0;
 	width: 100%;
 	transition: top 0.6s;
 	display: flex;
@@ -16,14 +17,15 @@
 }
 
 .Header {
-	background-color: #032541;
-	font-family: "Work Sans", sans-serif;
+	background-color: transparent;
+	font-family: "Nunito", sans-serif;
 	font-weight: bold;
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
 	top: 0;
 	width: 100%;
+	border-bottom: 1px solid white;
 }
 
 .header-left {
@@ -78,6 +80,10 @@
 	text-decoration: none;
 }
 
+.header-burger {
+	display: none;
+}
+
 @media (max-width: 700px) {
 	.header-burger {
 		color: white;
@@ -85,5 +91,6 @@
 		position: absolute;
 		top: 4px;
 		left: 9vw;
+		display: block;
 	}
 }
