--- a/src/components/people/popularPeople/PopularPeople.style.scss
+++ b/src/components/people/popularPeople/PopularPeople.style.scss
@@ -7,7 +7,7 @@
 		padding: 1rem 0 1rem 1rem;
 		font-size: 1.5rem;
 		font-weight: 600;
-		font-family: Arial;
+		font-family: "Nunito", sans-serif;
 		padding-left: 1rem;
 		color: rgb(3, 37, 65);
 		margin-top: 4rem;
