--- a/src/components/layouts/footer/Footer.styles.scss
+++ b/src/components/layouts/footer/Footer.styles.scss
@@ -1,8 +1,23 @@
 .Footer {
-	background-color: rgb(3, 31, 55);
+	background: linear-gradient(
+		135deg,
+		rgb(0, 0, 0) 0%,
+		rgba(42, 14, 80, 0.8) 100%
+	);
 	color: white;
 	width: 100%;
-	padding: 5rem 1rem;
+	padding: 18rem 1rem 3rem 1rem;
+	position: relative;
+
+	&::before {
+		content: "";
+		background: url("../../../assets/images/wave-large-reversed.png");
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 14rem;
+	}
 }
 
 .footerTitle {
