--- a/src/components/layouts/header/Header.styles.scss
+++ b/src/components/layouts/header/Header.styles.scss
@@ -17,7 +17,11 @@
 }
 
 .Header {
-	background-color: transparent;
+	background: linear-gradient(
+		135deg,
+		rgb(0, 0, 0) 0%,
+		rgba(42, 14, 80, 0.8) 100%
+	);
 	font-family: "Nunito", sans-serif;
 	font-weight: bold;
 	display: flex;
