finish moking up main page

--- a/src/components/layouts/footer/Footer.styles.scss
+++ b/src/components/layouts/footer/Footer.styles.scss
@@ -4,6 +4,7 @@
 		rgb(0, 0, 0) 0%,
 		rgba(42, 14, 80, 0.8) 100%
 	);
+
 	color: white;
 	width: 100%;
 	padding: 18rem 1rem 3rem 1rem;
@@ -16,7 +17,7 @@
 		top: 0;
 		left: 0;
 		width: 100%;
-		height: 14rem;
+		height: 23vh;
 	}
 }
 
@@ -96,5 +97,21 @@
 @media (max-width: 800px) {
 	.cards {
 		grid-template-columns: 1fr;
+	}
+}
+@media (max-width: 470px) {
+	.Footer::before {
+		background: url("../../../assets/images/wave-medium-reversed.png") center
+			no-repeat;
+		height: 9vh;
+		width: 100%;
+	}
+}
+
+@media (max-width: 375px) {
+	.Footer::before {
+		background: url("../../../assets/images/wave-small-reversed.png") no-repeat;
+		height: 4vh;
+		width: 100%;
 	}
 }
